--- a/README
+++ b/README
@@ -1,27 +1,58 @@
---------------------------------
-- HOW TO USE THIS BATCH TESTER -
---------------------------------
 
-The directory must contain:
-  tests 	=> the file that describes all the tests to be executed
-  tester.sh	=> the test-executing script
-  mysh		=> your binary
+# MiniShell 1
 
-'tests' file contains a series of numbered tests.
-Each test is placed between markers. For instance:
-	[42]		=> beginning of the test number 42
-	[42-END]	=> end of the test number 42
-In between those markers, the following instructions must be found:
-	SETUP="script"	=> script to be executed before launching the test
-	NAME="name"     => name of the test
-	CLEAN="script"  => script to be executed after launching the test
-	TESTS=...	=> series of commands to be sent to the shell
+The goal of this project was to recreate a TCSH env in C.
+## Run Locally
 
-Arguments :
-./tester.sh		=> no argument : all the tests are executed + debug mode for the KO tests only
-./tester.sh 42		=> 1 argument : only this one test is executed
-./tester.sh -d 42	=> debug mode : printing of the 42sh and tcsh outputs
+Clone the project
 
-The batch tester launches the tests with tcsh, then with mysh and compare the results.
+```bash
+  git clone <repository code>
+```
 
-Binary Name and Reference Shell can be setup in tester.sh script
+Go to the project directory
+
+```bash
+  cd minishell
+```
+
+Make the project
+
+```bash
+  make
+
+  make help
+```
+
+Start the sh
+
+```bash
+  ./mysh
+```
+
+
+## Running Tests
+
+You'll find a bunch of test in the tests/testing file.
+
+To run them :
+
+```bash
+  ./tester.sh
+```
+
+
+## 🚀 About Me
+
+Keyboard and coding enthusiast studying at EPITECH.
+
+
+## Authors
+
+- [@ludecieldev](https://www.github.com/ludecieldev)
+
+
+## Feedback
+
+If you have any feedback, please reach to me at alexandre.garbe@epitech.eu
+
